<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBgColor"
    tools:context=".ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">


            <ImageView
                android:id="@+id/forget_password_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />


            <ImageView
                android:id="@+id/forget_password_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_lock_24" />


            <TextView
                android:id="@+id/forget_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/muli_black"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/forget_npassword"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/forget_password_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="@string/provide_your_accounts_email_for_which_u_want_to_reset_your_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_forget_password_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_your_email"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_forget_password_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/inter_extrabold"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forget_password_next_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_forget_password_email"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/tvColor"
                    android:backgroundTint="@color/tvColor"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/next_reset"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/make_selection_mail_box"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:padding="10dp"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/mail_icon"
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_baseline_email_24" />

                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_toEndOf="@id/mail_icon"
                    android:fontFamily="@font/muli"
                    android:text="@string/via_mail"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/mail_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mail_title"
                    android:layout_toEndOf="@id/mail_icon"
                    android:clickable="false"
                    android:fontFamily="@font/muli"
                    android:text="support@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/sendMailBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>