<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EDEDE9">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateOfPublish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="dateOfPublish"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/productImage"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/user_inserted_image"
                        android:scaleType="fitXY"
                        android:src="@drawable/dog" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/user_status"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/threeDotsOption"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:contentDescription="@string/edit_or_delete_options"
            android:src="@drawable/dots"
            app:menu="@menu/post_menu_options" />

    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>