<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="20dp"
    android:background="#EDEDE9"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:contentPadding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="10dp"
        app:cardCornerRadius="120dp">

        <ImageView
            android:id="@+id/userProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/user_profile_picture"
            android:src="@drawable/ic_baseline_person_24" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_extra_bold"
                android:text="username"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dateOfPublish"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="0dp"
                android:gravity="start"
                android:text="dateOfPublish"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bookmark_post"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/save"
                app:tint="@color/tvColor" />

            <ImageView
                android:id="@+id/bookmark_checked_post"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/bookmark_checked"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_post_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:maxLength="200"
            android:text="this is the first descrption for a post ."
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/user_inserted_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/dog" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/user_status"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="25$"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buyProductBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/make_purchase"
                android:textAllCaps="false"
                android:textColor="@color/tvColor"
                app:cornerRadius="50dp"
                app:strokeColor="@color/tvColor"
                app:strokeWidth="1dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>